# keyphrase

./: README-ja_JP.md  README.md  pyproject.toml
src/keyphrase/: __about__.py  __init__.py  color_utils.py  harmony_ollama.py  keyphrase.py  pdf_utils.py  text_utils.py
tests/: test_text_utils.py  test_text_utils_for_japanese_text.py
